# Networkmanager_GUI_Qt

./: .gitignore  CMakeLists.txt  README.md  architecture.md  main.cpp  main.qml
qml/: Main.qml
qml/components/: ConnectionEditorPanel.qml  DeviceCard.qml  NewConnectionDialog.qml  SideBar.qml  TopBar.qml  WifiItem.qml
qml/pages/: ConnectionsPage.qml  DevicePage.qml  WifiPage.qml
src/filter/: device_filter_proxy_model.cpp  device_filter_proxy_model.h
src/model/: device_info.cpp  device_info.h  device_model.cpp  device_model.h
src/model/ap/: ap_model.cpp  ap_model.h
src/model/connection/: ConnectionEditorModel_QML_API.md  con_editor_model.cpp  con_editor_model.h  con_list_model.cpp  con_list_model.h  con_runtime_model.cpp  con_runtime_model.h  con_setting_info.cpp  con_setting_info.h
src/model/device/: device_info.cpp  device_info.h  device_model.cpp  device_model.h
src/service/: ConnectionManager_QML_API.md  ap_service.cpp  ap_service.h  con_runtime_service.cpp  con_runtime_service.h  connection_manager.cpp  connection_manager.h  device_service.cpp  device_service.h
src/utils/: network_utils.cpp  network_utils.h
src/wrapper/: Wrapper_QML_API.md  nm_wrapper.cpp  nm_wrapper.h
